# EvoSim

./: .gitignore  .jupytext.toml  .pre-commit-config.yaml  .rstcheck.cfg  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yml  ci.yml  testing.yml  todos.yml
data/: socketStatus  sockets  stations
docs/: conf.py  index.rst
docs/source/: api.rst  conf.py  index.rst  installation.md  manual.rst  userguide.rst
notebooks/: README.rst  benchmarking.ipynb  benchmarks.csv  simple-random-allocation.ipynb  static-allocator-comparison.ipynb
src/chargingDemand/: DemandGenerator.java
src/chargingInfrastructure/: Status.java  SupplyGenerator.java
src/chargingStation/: ChargingPoint.java  Geolocation.java  SocketType.java  Statistics.java  Status.java
src/electricVehicle/: BatteryLevel.java  CarModel.java  DistanceConstraint.java  ElectricVehicle.java
src/evoSim/: Dynamic.java  Main.java  OptimalSolution.java  Static.java  run_main.py
src/evosim/: __init__.py  __main__.py  allocators.py  allocators.rst  autoconf.py  autoconf.rst  charging_posts.py  charging_posts.rst  constants.py  electric_vehicles.py  electric_vehicles.rst  fleet.py  fleet.rst  io.py  matchers.py  matchers.rst  objectives.py  objectives.rst  schema.py  script.py  simulation.py  simulation.rst  supply.py  supply.rst
src/experiments/: allocation_rates_all.py  (+7 more)
tests/: conftest.py  test_allocators.py  test_autoconf.py  test_charging_point.py  test_charging_posts.py  test_evosim.py  test_io.py  test_matchers.py  test_objectives.py  test_poetry_template.py  test_simulation.py
(+22 files in other folders)
