[tool.poetry]
name = "EvoSim"
version = "0.2.0"
description = "Electric Vehicle fleet Optimisation for Lowering Vehicle Emissions"
authors = [
    "Oytun Babacan",
    "Daphné Tuncer",
    "Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"
]
readme = "README.md"
homepage = "https://github.com/ImperialCollegeLondon/EvoSim"
packages = [{include = "evosim", from = "src"}]
include = ["*.rst"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.4"
recommonmark = "^0.6.0"
flake8 = "^3.8.2"
mypy = "^0.780"
black = "^19.10b0"
pre-commit = "^2.4.0"
pytest-mypy = "^0.6.2"
pytest-cov = "^2.9.0"
pytest-flake8 = "^1.0.6"
bump2version = "^1.0.0"
jupytext = "^1.6.0"
nbsphinx = "^0.7.1"
bokeh = "^2.2.1"
jupyter = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
